--- a/website/app/templates/chessboard.html
+++ b/website/app/templates/chessboard.html
@@ -24,10 +24,10 @@
     }
     
 </style>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/chessboard-1.0.0.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='chessboard/css/chessboard-1.0.0.css') }}">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="{{ url_for('static', filename='js/chessboard-1.0.0.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/chess.js') }}"></script>
+    <script src="{{ url_for('static', filename='chessboard/js/chessboard-1.0.0.js') }}"></script>
+    <script src="{{ url_for('static', filename='chessboard/js/chess.js') }}"></script>
     <div class='board'>
         <div class="chessBoard" id="myBoard"></div>
         <label>Status:</label>
