--- a/chessapp/templates/base.html
+++ b/chessapp/templates/base.html
@@ -12,9 +12,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="login">Login <span class="sr-only">(current)</span></a>
-            </li>
+            {% if g.user %}
+              <li class="nav-item active">
+                <a class="nav-link" href="/">{{ g.user['username'] }} <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="/logout">logout <span class="sr-only">(current)</span></a>
+              </li>
+            {% else %}
+              <li class="nav-item active">
+                <a class="nav-link" href="register">Register <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="login">Login <span class="sr-only">(current)</span></a>
+              </li>
+            {% endif %}
             <li class="nav-item">
               <a class="nav-link" href="chessboard">Join a Lobby</a>
             </li>
