--- a/chessapp/templates/login.html
+++ b/chessapp/templates/login.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Login{% endblock %}
+{% block header %}
+  <h1>{% block title %}Login{% endblock %}</h1>
+{% endblock %}
 {% block content %} 
 <style type="text/css">
     @import url(https://fonts.googleapis.com/css?family=Roboto:300);
@@ -46,6 +48,7 @@
       border: 0;
       padding: 10px;
       color: #FFFFFF;
+      background-color: #0c72f7;
       font-size: 14px;
       -webkit-transition: all 0.3 ease;
       transition: all 0.3 ease;
@@ -53,13 +56,14 @@
     }
     .form button:hover,.form button:active,.form button:focus {
       background: #0363e0;
-      -webkit-transition: background-color 150ms linear;
-      -ms-transition: background-color 150ms linear;
-      transition: background-color 150ms linear;
+      -webkit-transition: background-color 100ms linear;
+      -ms-transition: background-color 100ms linear;
+      transition: background-color 100ms linear;
     }
+
     .form .message {
       margin: 15px 0 0;
-      color: #b3b3b3;
+      color: #086bee;
       font-size: 12px;
     }
     .container {
@@ -77,10 +81,16 @@
     </style>
     
     <div class="login-page">   
-        <div class="form">
-            <input type="text" name="inputName" placeholder="Username"/>
-            <button type="submit">Login</button>   
-            <input type="checkbox" checked="checked">Remember me   
-        </div>
+      <div class="form">
+        <form class="login-form" action="#" method="POST">
+          <input type="text" id="username" name="username" placeholder="Username"/>
+          <button type="submit">Login</button>   
+        </form>
+        {% for message in get_flashed_messages() %}
+          <div class="flash">{{ message }}</div>
+        {% endfor %}
+      </div>
     </div>   
+        
+
 {% endblock %}
