--- a/chessapp/templates/base.html
+++ b/chessapp/templates/base.html
@@ -19,6 +19,9 @@
               <li class="nav-item active">
                 <a class="nav-link" href="/logout">logout <span class="sr-only">(current)</span></a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="chessboard">Join a Lobby<span class="sr-only">(current)</span></a>
+              </li>
             {% else %}
               <li class="nav-item active">
                 <a class="nav-link" href="register">Register <span class="sr-only">(current)</span></a>
@@ -27,15 +30,6 @@
                 <a class="nav-link" href="login">Login <span class="sr-only">(current)</span></a>
               </li>
             {% endif %}
-            <li class="nav-item">
-              <a class="nav-link" href="chessboard">Join a Lobby</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Chat</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
           </ul>
         </div>
       </nav>
