--- a/chessapp/templates/chessboard.html
+++ b/chessapp/templates/chessboard.html
@@ -39,8 +39,8 @@
       <div id="gameBoard" class="board">
           <button type="button" class="button white" id="chooseWhite" onclick="setColor('white')">White</button>   
           <button type="button" class="button black" id="chooseBlack" onclick="setColor('black')">Black</button>
-          <div id="whitePlayer"></div>  
-          <div id="blackPlayer"></div>  
+          <div id="whitePlayer">Empty</div>  
+          <div id="blackPlayer">Empty</div>  
           <div id="gameover"></div>
           <label id="winnerLabel"></label>
           <div id="winnerDiv"></div>
