--- a/chessapp/templates/base.html
+++ b/chessapp/templates/base.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Chess With Friends</a>
+        <a class="navbar-brand" href="/">It's Chess Day</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,6 +27,9 @@
                 <a class="nav-link" href="login">Login <span class="sr-only">(current)</span></a>
               </li>
               {% endif %}
+              <li class="nav-item active">
+                <a class="nav-link" href="/leaderboard">Leaderboard<span class="sr-only">(current)</span></a>
+              </li>
               <li class="nav-item active">
                 <a class="nav-link" href="chessboard">Join a Lobby<span class="sr-only">(current)</span></a>
               </li>
