--- a/chessapp/templates/chessboard.html
+++ b/chessapp/templates/chessboard.html
@@ -24,6 +24,7 @@
       }
 
       .button {
+        width: 150px;
         padding: 15px 50px;
         text-align: center;
         text-decoration: none;
@@ -45,10 +46,11 @@
         position: relative;
       }
       .black {
+        border: 1px solid black;
         border: none;
         background-color: black;
         color: white;
-        left: 253px; 
+        left: 245px; 
         top: 550px; 
         height: auto;
         margin: 0 auto;
@@ -59,7 +61,7 @@
         font-family: 'Helvetica Neue', sans-serif;
         font-weight: bold;
         position: relative;
-        left: 290px;
+        left: 282px;
         top: 350px;
       }
 
@@ -67,7 +69,7 @@
         font-family: 'Helvetica Neue', sans-serif;
         font-weight: bold;
         position: relative;
-        left: 290px;
+        left: 282px;
         top: 525px;
       }
 
