--- a/chessapp/templates/dashboard.html
+++ b/chessapp/templates/dashboard.html
@@ -7,12 +7,10 @@
    <article class="leaderboard">
         <header>
             <div class="row position" style="padding-top:10px;">
-                <div class="col"><hr></div>
-                <div class="col-auto"><p class="h3" align="center">Current Elo Rating: {{g.user["elo"]}}</p></div>
-                <div class="col"><hr></div>
+                <div class="col"><p class="h3 leaderboard_title" align="center" ">Current Elo Rating: {{g.user["elo"]}}</p></div>
             </div>
             <div class="row position" style="padding-top:20px;">
-                <div class="col"><p class="h3" align="center">Match History</p></div>
+                <div class="col"><p class="h3 leaderboard_title" align="center" ">Match History</p></div>
     
         </header>
 
