--- a/chessapp/static/leaderboard.css
+++ b/chessapp/static/leaderboard.css
@@ -20,6 +20,18 @@
       margin: 0;
   }
 
+  .leaderboard__label {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    align-items: center;
+    padding: 0px 20px 10px 10px;
+    overflow: hidden;
+    border-radius: 5px;
+    box-shadow: 0 5px 7px -1px rgba(51, 51, 51, 0.23);
+    cursor: pointer;
+    background-color: rgb(95, 84, 84);
+  }  
+  
   .leaderboard__profiles {
     background-color: #fff;
     border-radius: 0 0 12px 12px;
@@ -64,6 +76,20 @@
     text-align: right;
   }
 
+  .label__name {
+    color: #b8beda;
+    font-weight: 600;
+    font-size: 40px;
+    letter-spacing: 0.64px;
+    margin-left: 12px;
+  }
+
+  .label__value {
+    color: #b8beda;
+    font-weight: 700;
+    font-size: 40px;
+    text-align: right;
+  }
   .body {
     margin: 0;
     background-color: #eaeaea;
