--- a/chessapp/templates/chessboard.html
+++ b/chessapp/templates/chessboard.html
@@ -10,7 +10,7 @@
         height: 100vh;
         z-index: 1;
         text-align: center;
-        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+        box-shadow: 0 4px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
       }
 
       .chessboard{
