Began work on /roomselect. Reorganizing static files

--- a/chessapp/templates/leaderboard.html
+++ b/chessapp/templates/leaderboard.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{% endblock %}
 {% block content %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='leaderboard.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/leaderboard.css') }}">
 
    <article class="leaderboard">
         <header>
