--- a/chessapp/chess/templates/chess/chessboard.html
+++ b/chessapp/chess/templates/chess/chessboard.html
@@ -136,6 +136,6 @@
           <script src="{{ url_for('static', filename='chessboard/js/chessboard-1.0.0.js') }}"></script>
           <script src="{{ url_for('static', filename='chessboard/js/chess.js') }}"></script>
           <script src="{{ url_for('static', filename='node_modules/socket.io/client-dist/socket.io.js') }}"></script>
-          <script src="{{ url_for('static', filename='chessboardpage.js') }}"></script>
+          <script src="{{ url_for('static', filename='js/chessboardpage.js') }}"></script>
       </div>
 {% endblock %}
