--- a/chessapp/templates/dashboard.html
+++ b/chessapp/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% block title %}{% endblock %}
 
 {% block content %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
 
    <article class="leaderboard">
         <header>
