--- a/chessapp/chess/templates/chess/chessboard.html
+++ b/chessapp/chess/templates/chess/chessboard.html
@@ -121,7 +121,7 @@
         line-height: 1;
       }
   </style>
-      <link rel="stylesheet" href="{{ url_for('static', filename='chessboard/css/chessboard-1.0.0.css') }}">
+      <link rel="stylesheet" href="{{ url_for('static', filename='css/chessboard-1.0.0.css') }}">
       <div id="gameBoard" class="board">
           <button type="button" class="button white" id="choose_white" onclick="set_color('white')">White</button>   
           <button type="button" class="button black" id="choose_black" onclick="set_color('black')">Black</button>
@@ -133,8 +133,8 @@
           <div id="winner_name" class="winner_name">.</div>
           <div class="chessboard" id="chessboard"></div>
           <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-          <script src="{{ url_for('static', filename='chessboard/js/chessboard-1.0.0.js') }}"></script>
-          <script src="{{ url_for('static', filename='chessboard/js/chess.js') }}"></script>
+          <script src="{{ url_for('static', filename='js/chessboard-1.0.0.js') }}"></script>
+          <script src="{{ url_for('static', filename='js/chess.js') }}"></script>
           <script src="{{ url_for('static', filename='node_modules/socket.io/client-dist/socket.io.js') }}"></script>
           <script src="{{ url_for('static', filename='js/chessboardpage.js') }}"></script>
       </div>
