--- a/chessapp/chess/templates/chess/roomselect.html
+++ b/chessapp/chess/templates/chess/roomselect.html
@@ -1,61 +1,81 @@
 {% extends "base.html" %}
-{% block title %}ChessBoard{% endblock %}
+{% block header %}
+<h1>{% block title %}Room Select{% endblock %}</h1>
+{% endblock %}
 {% block content %}
-<section class="section-products">
-    <div class="container">
-            <div class="row justify-content-center text-center">
-                    <div class="col-md-8 col-lg-6">
-                            <div class="header">
-                                    <h2>Competitive Lobbies</h2>
-                            </div>
-                    </div>
-            </div>
-            <div class="row">
-                    <!-- Single Product -->
-                    <a href="{{url_for('chess_bp.chessboard')}}" style="width: px; color: rgb(0,0,0); text-decoration: None">
-                    <div class="col-md-6 col-lg-4 col-xl-3">
-                            <div id="product-1" class="single-product">
-                                    <div class="part-1">
-                                            <img 
-                                            src="{{url_for('static', filename='linus.jpg')}}" 
-                                            width="150" 
-                                            >
-                                    </div>
-                                    <div class="part-2">
-                                            <h5 class="product-title">Competitive Lobby 1</h3>
-                                            <h6 class="product-old-price">Match Status: Ongoing</h4>
-                                            <h6 class="product-price">Total Players in lobby: 2</h4>
-                                    </div>
-                            </div>
-                    </div>
-                    </a>
-            </div>
-            <div class="row justify-content-center text-center">
-                    <div class="col-md-8 col-lg-6">
-                            <div class="header">
-                                    <h2>Practice Lobbies</h2>
-                            </div>
-                    </div>
-            </div>
-            <div class="row">
-                <!-- Single Product -->
-                <div class="col-md-6 col-lg-4 col-xl-3">
-                        <div id="product-1" class="single-product">
-                                <div class="part-1">
-                                    <a href="{{url_for('chess_bp.chessboard')}}">
-                                        <img 
-                                        src="{{url_for('static', filename='gunch.jpg')}}" 
-                                        width="150" 
-                                        >
-                                    </a>
-                                </div>
-                                <div class="part-2">
-                                        <h5 class="product-title">Practice Lobby 1</h3>
-                                        <h6 class="product-old-price">Match Status: Ongoing</h4>
-                                        <h6 class="product-price">Total Players in lobby: 2</h4>
-                                </div>
-                        </div>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/roomselect.css') }}">
+<section class="section-lobbies" >
+    <div class="container" >
+        <div class="row justify-content-center text-center">
+            <div class="col-md-8 col-lg-6">
+                <div class="header" >
+                    <h2>Competitive Lobbies</h2>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <!-- Single Product -->
+            <div class="col-md-6 col-lg-4 col-xl-3">
+                    <div id="lobby-1" class="single-lobby">
+                        <a href="{{url_for('chess_bp.chessboard')}}">
+                            <div class="lobby-image">
+                                <img 
+                                src="{{url_for('static', filename='images/linus.jpg')}}" 
+                                width="190" 
+                                >
+                            </div>
+                            <div class="lobby-details">
+                                <h5 class="lobby-title"">Competitive Lobby 1</h3>
+                                <h6 class="lobby-status">Match Status: Ongoing</h4>
+                                <h6 class="lobby-player-count">Total Players in lobby: 2</h4>
+                            </div>
+                        </a>
+                    </div>
+            </div>
+            <div class="col-md-6 col-lg-4 col-xl-3">
+                    <div id="lobby-1" class="single-lobby">
+                        <a href="{{url_for('chess_bp.chessboard')}}">
+                            <div class="lobby-image">
+                                <img 
+                                src="{{url_for('static', filename='images/linus.jpg')}}" 
+                                width="190" 
+                                >
+                            </div>
+                            <div class="lobby-details">
+                                <h5 class="lobby-title"">Competitive Lobby 1</h3>
+                                <h6 class="lobby-status">Match Status: Ongoing</h4>
+                                <h6 class="lobby-player-count">Total Players in lobby: 2</h4>
+                            </div>
+                        </a>
+                    </div>
+            </div>
+        </div>
+        <div class="row justify-content-center text-center">
+            <div class="col-md-8 col-lg-6">
+                <div class="header" style="padding: 40px 0 0px;">
+                    <h2>Practice Lobbies</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <!-- Single Product -->
+            <div class="col-md-6 col-lg-4 col-xl-3">
+                    <div id="lobby-1" class="single-lobby">
+                        <a href="{{url_for('chess_bp.chessboard')}}">
+                            <div class="lobby-image">
+                                <img 
+                                src="{{url_for('static', filename='images/gunch.jpg')}}" 
+                                width="170" 
+                                >
+                            </div>
+                            <div class="lobby-details">
+                                <h5 class="lobby-title">Practice Lobby 1</h3>
+                                <h6 class="lobby-status">Match Status: Ongoing</h4>
+                                <h6 class="lobby-player-count">Total Players in lobby: 2</h4>
+                            </div>
+                        </a>
+                    </div>
+            </div>
         </div>
     </div>
 </section>
