--- a/chessapp/static/css/roomselect.css
+++ b/chessapp/static/css/roomselect.css
@@ -1,49 +1,61 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap'); */
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
-body {
+.sections-lobbies {
     font-family: "Poppins", sans-serif;
-    color: #444444;
+    position: absolute;
+    top: 100px;
 }
 
-a,
+a {
+    text-decoration: none;
+    color: inherit;
+    font-size: 0.7em;
+    margin-top: -10px;
+    max-width: 190px;
+
+}
+
 a:hover {
     text-decoration: none;
     color: inherit;
+    font-size: 0.7em;
+    margin-top: -10px;
 }
 
-.section-products {
-    padding: 80px 0 54px;
-}
 
-.section-products .header {
+.section-lobbies .header {
+    margin-top: 50px;
     margin-bottom: 50px;
 }
 
-.section-products .header h3 {
+.section-lobbies .header h3 {
     font-size: 1rem;
     color: #fe302f;
     font-weight: 500;
 }
 
-.section-products .header h2 {
+.section-lobbies .header h2 {
     font-size: 2.2rem;
     font-weight: 400;
     color: #444444; 
 }
 
-.section-products .single-product {
+.section-lobbies .single-lobby {
+    border-radius: 5px 5px 5px 5px;
+    /* box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%); */
+    box-shadow: 0 5px 20px rgba(0, 0, 0, .30);
     margin-bottom: 26px;
-}
-
-.section-products .single-product .part-1 {
-    position: relative;
-    height: 290px;
-    max-height: 290px;
-    margin-bottom: 20px;
+    max-width: 190px;
     overflow: hidden;
+    transition: transform 300ms, box-shadow 300ms;
 }
 
-.section-products .single-product .part-1::before {
+.section-lobbies .single-lobby:hover {
+    transform: scale(1.02);
+    box-shadow: 0 12px 30px rgba(0, 0, 0, .30)
+}
+/* .section-lobbies .single-lobby .lobby-image::before {
 		position: absolute;
 		content: "";
 		top: 0;
@@ -52,35 +64,35 @@ a:hover {
 		height: 100%;
 		z-index: -1;
 		transition: all 0.3s;
-}
-
-.section-products .single-product:hover .part-1::before {
+} */
+/* 
+.section-lobbies .single-lobby:hover .lobby-image::before {
 		transform: scale(1.2,1.2) rotate(5deg);
 }
 
-.section-products #product-1 .part-1::before {
+.section-lobbies #lobby-1 .lobby-image::before {
     background: url("https://i.ibb.co/L8Nrb7p/1.jpg") no-repeat center;
     background-size: cover;
 		transition: all 0.3s;
 }
 
-.section-products #product-2 .part-1::before {
+.section-lobbies #lobby-2 .lobby-image::before {
     background: url("https://i.ibb.co/cLnZjnS/2.jpg") no-repeat center;
     background-size: cover;
 }
 
-.section-products #product-3 .part-1::before {
+.section-lobbies #lobby-3 .lobby-image::before {
     background: url("https://i.ibb.co/L8Nrb7p/1.jpg") no-repeat center;
     background-size: cover;
 }
 
-.section-products #product-4 .part-1::before {
+.section-lobbies #lobby-4 .lobby-image::before {
     background: url("https://i.ibb.co/cLnZjnS/2.jpg") no-repeat center;
     background-size: cover;
-}
+} */
 
-.section-products .single-product .part-1 .discount,
-.section-products .single-product .part-1 .new {
+ /* .section-lobbies .single-lobby .lobby-image .discount,
+.section-lobbies .single-lobby .lobby-image .new {
     position: absolute;
     top: 15px;
     left: 20px;
@@ -89,35 +101,25 @@ a:hover {
     padding: 2px 8px;
     text-transform: uppercase;
     font-size: 0.85rem;
-}
+} */
 
-.section-products .single-product .part-1 .new {
+/* .section-lobbies .single-lobby .lobby-image .new {
     left: 0;
     background-color: #444444;
 }
 
-.section-products .single-product .part-1 ul {
-    position: absolute;
-    bottom: -41px;
-    left: 20px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    opacity: 0;
-    transition: bottom 0.5s, opacity 0.5s;
-}
+.section-lobbies .single-lobby .lobby-image {
+    margin-bottom: -115px;
+} */
 
-.section-products .single-product:hover .part-1 ul {
-    bottom: 30px;
-    opacity: 1;
-}
 
-.section-products .single-product .part-1 ul li {
+/*
+.section-lobbies .single-lobby .lobby-image img {
     display: inline-block;
     margin-right: 4px;
 }
 
-.section-products .single-product .part-1 ul li a {
+.section-lobbies .single-lobby .lobby-image img {
     display: inline-block;
     width: 40px;
     height: 40px;
@@ -127,29 +129,33 @@ a:hover {
     text-align: center;
     box-shadow: 0 2px 20px rgb(50 50 50 / 10%);
     transition: color 0.2s;
-}
+} */
 
-.section-products .single-product .part-1 ul li a:hover {
+.section-lobbies .single-lobby .lobby-image:hover {
     color: #fe302f;
 }
 
-.section-products .single-product .part-2 .product-title {
+.section-lobbies .single-lobby .lobby-details .lobby-title {
     font-size: 1rem;
 }
 
-.section-products .single-product .part-2 h4 {
+.section-lobbies .single-lobby .lobby-details h5 {
     display: inline-block;
-    font-size: 1rem;
+    margin: 0px 0px 0px 5px;
+}
+.section-lobbies .single-lobby .lobby-details h6 {
+    display: inline-block;
+    font-size: 0.85rem;
+    margin: 0px 0px -1px 5px;
 }
 
-.section-products .single-product .part-2 .product-old-price {
+.section-lobbies .single-lobby .lobby-details .lobby-status {
     position: relative;
-    padding: 0 7px;
-    margin-right: 2px;
-    opacity: 0.6;
+    /* padding: 0 7px; */
+    /* margin-right:0px; */
 }
 
-.section-products .single-product .part-2 .product-old-price::after {
+/* .section-lobbies .single-lobby .lobby-details .lobby-status::after {
     position: absolute;
     content: "";
     top: 50%;
@@ -158,4 +164,4 @@ a:hover {
     height: 1px;
     background-color: #444444;
     transform: translateY(-50%);
-}
+} */
