Fixed navbar shrinking on roomselect

--- a/chessapp/chess/templates/chess/roomselect.html
+++ b/chessapp/chess/templates/chess/roomselect.html
@@ -15,7 +15,7 @@
         </div>
         <div class="row">
             <!-- Single Product -->
-            <div class="col-md-6 col-lg-4 col-xl-3">
+            <div class="col-md-6 col-lg-4 col-xl-3" style="max-width: 250px;">
                     <div id="lobby-1" class="single-lobby">
                         <a href="{{url_for('chess_bp.chessboard')}}">
                             <div class="lobby-image">
