--- a/chessapp/static/css/roomselect.css
+++ b/chessapp/static/css/roomselect.css
@@ -7,7 +7,7 @@
     top: 100px;
 }
 
-a {
+.section-lobbies a {
     text-decoration: none;
     color: inherit;
     font-size: 0.7em;
@@ -16,7 +16,7 @@ a {
 
 }
 
-a:hover {
+.section-lobbies a:hover {
     text-decoration: none;
     color: inherit;
     font-size: 0.7em;
@@ -42,10 +42,11 @@ a:hover {
 }
 
 .section-lobbies .single-lobby {
+    align-self: center;
     border-radius: 5px 5px 5px 5px;
-    /* box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%); */
     box-shadow: 0 5px 20px rgba(0, 0, 0, .30);
     margin-bottom: 26px;
+    margin-left: 30px;
     max-width: 190px;
     overflow: hidden;
     transition: transform 300ms, box-shadow 300ms;
@@ -55,81 +56,7 @@ a:hover {
     transform: scale(1.02);
     box-shadow: 0 12px 30px rgba(0, 0, 0, .30)
 }
-/* .section-lobbies .single-lobby .lobby-image::before {
-		position: absolute;
-		content: "";
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: -1;
-		transition: all 0.3s;
-} */
-/* 
-.section-lobbies .single-lobby:hover .lobby-image::before {
-		transform: scale(1.2,1.2) rotate(5deg);
-}
 
-.section-lobbies #lobby-1 .lobby-image::before {
-    background: url("https://i.ibb.co/L8Nrb7p/1.jpg") no-repeat center;
-    background-size: cover;
-		transition: all 0.3s;
-}
-
-.section-lobbies #lobby-2 .lobby-image::before {
-    background: url("https://i.ibb.co/cLnZjnS/2.jpg") no-repeat center;
-    background-size: cover;
-}
-
-.section-lobbies #lobby-3 .lobby-image::before {
-    background: url("https://i.ibb.co/L8Nrb7p/1.jpg") no-repeat center;
-    background-size: cover;
-}
-
-.section-lobbies #lobby-4 .lobby-image::before {
-    background: url("https://i.ibb.co/cLnZjnS/2.jpg") no-repeat center;
-    background-size: cover;
-} */
-
- /* .section-lobbies .single-lobby .lobby-image .discount,
-.section-lobbies .single-lobby .lobby-image .new {
-    position: absolute;
-    top: 15px;
-    left: 20px;
-    color: #ffffff;
-    background-color: #fe302f;
-    padding: 2px 8px;
-    text-transform: uppercase;
-    font-size: 0.85rem;
-} */
-
-/* .section-lobbies .single-lobby .lobby-image .new {
-    left: 0;
-    background-color: #444444;
-}
-
-.section-lobbies .single-lobby .lobby-image {
-    margin-bottom: -115px;
-} */
-
-
-/*
-.section-lobbies .single-lobby .lobby-image img {
-    display: inline-block;
-    margin-right: 4px;
-}
-
-.section-lobbies .single-lobby .lobby-image img {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    background-color: #ffffff;
-    color: #444444;
-    text-align: center;
-    box-shadow: 0 2px 20px rgb(50 50 50 / 10%);
-    transition: color 0.2s;
-} */
 
 .section-lobbies .single-lobby .lobby-image:hover {
     color: #fe302f;
@@ -151,17 +78,4 @@ a:hover {
 
 .section-lobbies .single-lobby .lobby-details .lobby-status {
     position: relative;
-    /* padding: 0 7px; */
-    /* margin-right:0px; */
 }
-
-/* .section-lobbies .single-lobby .lobby-details .lobby-status::after {
-    position: absolute;
-    content: "";
-    top: 50%;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background-color: #444444;
-    transform: translateY(-50%);
-} */
