Have chessboard url working with parameters

--- a/chessapp/chess/templates/chess/chessboard.html
+++ b/chessapp/chess/templates/chess/chessboard.html
@@ -132,6 +132,7 @@
           <label id="winner_text" class="winner_text">.</label>
           <div id="winner_name" class="winner_name">.</div>
           <div class="chessboard" id="chessboard"></div>
+          <!-- <img src="{{url_for('static', filename='images/linus.jpg')}}" -->
           <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
           <script src="{{ url_for('static', filename='js/chessboard-1.0.0.js') }}"></script>
           <script src="{{ url_for('static', filename='js/chess.js') }}"></script>
