--- a/chessapp/chess/templates/chess/chessboard.html
+++ b/chessapp/chess/templates/chess/chessboard.html
@@ -14,9 +14,9 @@
 }
 
 .chessboard{
-  left: -200px;
+  left: -190px;
   width: 700px;
-  top: -50px;
+  top: -20px;
   margin: 0 auto;
   padding: 10px;
   position: relative;
@@ -25,12 +25,15 @@
 }
 
 .button {
-  width: 150px;
+  height: 50px;
+  width: 225px;
   padding: 15px 50px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 16px;
+  font-weight: bold;
   margin: 4px 2px;
   vertical-align: top;
   cursor: pointer;
@@ -44,9 +47,8 @@
   border: 1px solid black;
   background-color: white;
   color: black;
-  left: 400px; 
+  left: 485px; 
   top: 550px; 
-  height: auto;
   margin: 0 auto;
   position: relative;
     transition: all 1 ease;
@@ -61,49 +63,14 @@
   border: none;
   background-color: black;
   color: white;
-  left: 245px; 
+  left: 255px; 
   top: 150px; 
-  height: auto;
   margin: 0 auto;
   position: relative;
   }
 
 .black:hover {
   background-color: rgb(32, 32, 32);
-}
-
-.game_over{
-  position: relative;
-  color: white;
-  left: 360px;
-  top: 0px; 
-  font-family: 'Helvetica Neue', sans-serif;
-  font-size: 25px;
-  letter-spacing: -1px;
-  line-height: 1;
-}
-
-.winner_text{
-  position: relative;
-  color: white;
-  left: 360px;
-  top: 30px; 
-  font-family: 'Helvetica Neue', sans-serif;
-  font-size: 25px;
-  letter-spacing: -1px;
-  line-height: 1;
-}
-
-.winner_name{
-  position: relative;
-  color: white;
-  left: 360px;
-  top: 30px; 
-  font-family: 'Helvetica Neue', sans-serif;
-  font-size: 40px;
-  font-weight: bold;
-  letter-spacing: -1px;
-  line-height: 1;
 }
 
 .turn{
@@ -118,12 +85,11 @@
 }
   /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 2; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
+  display: none; 
+  position: fixed; 
+  z-index: 2; 
+  padding-top: 100px;
+  font-family: 'Helvetica Neue', sans-serif;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
@@ -135,9 +101,39 @@
 .modal-content {
   background-color: #fefefe;
   margin: auto;
+  margin-top: 75px;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 40%;
+}
+
+.modal-content-text {
+  margin: 10px 0 10px 30px;
+}
+
+.game-over{
+  position: relative;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 25px;
+  letter-spacing: -1px;
+  line-height: 1;
+}
+
+.winner-text{
+  position: relative;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 25px;
+  letter-spacing: -1px;
+  line-height: 1;
+}
+
+.winner-name{
+  position: relative;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  letter-spacing: -1px;
+  line-height: 1;
 }
 
 /* The Close Button */
@@ -156,19 +152,21 @@
 }
 </style>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/chessboard-1.0.0.css') }}">
-  
+  <!-- <button id="myBtn" onclick="open_modal()">Open Modal</button> -->
   <div id="game-end-modal" class="modal">
     <div class="modal-content">
       <span class="close" id="modal-close">&times;</span>
-      <p id="game-over"></p>
-      <label id="winner-text" class="winner-text"></label>
-      <div id="winner-name" class="winner-name"></div>
+      <div class="modal-content-text">
+        <p id="game-over" class="game-over">Game over, white is in checkmate!</p>
+        <label id="winner-text" class="winner-text">Winner:</label>
+        <div id="winner-name" class="winner-name">Christian</div>
+      </div>
     </div>
   </div>
 
   <div id="gameBoard" class="board">
-      <button type="button" class="button white" id="white-player" onclick="set_color('white')">White</button>   
-      <button type="button" class="button black" id="black-player" onclick="set_color('black')">Black</button>
+      <button type="button" class="button white" id="white-player" onclick="set_color('white')"></button>   
+      <button type="button" class="button black" id="black-player" onclick="set_color('black')"></button>
       <div class="chessboard" id="chessboard"></div>
       <!-- <img src="{{url_for('static', filename='images/linus.jpg')}}" -->
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -177,4 +175,7 @@
       <script src="{{ url_for('static', filename='node_modules/socket.io/client-dist/socket.io.js') }}"></script>
       <script src="{{ url_for('static', filename='js/chessboardpage.js') }}"></script>
   </div>
+
+
+  
 {% endblock %}
