--- a/chessapp/chess/templates/chess/roomselect.html
+++ b/chessapp/chess/templates/chess/roomselect.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="lobby-details">
                             <h5 class="lobby-title"">Competitive Lobby {{chessboard['id']}}</h3>
-                            <h6 class="lobby-status">Match Status: {{chessboard['board_status']}}</h4>
+                            <h6 class="lobby-status">Status: {{chessboard['board_status']}}</h4>
                             <h6 class="lobby-player-count">Users in lobby: {{chessboard['user_count']}}</h4>
                         </div>
                     </a>
@@ -56,7 +56,7 @@
                         </div>
                         <div class="lobby-details">
                             <h5 class="lobby-title">Practice Lobby {{practiceboard['id']}}</h3>
-                            <h6 class="lobby-status">Match Status: {{practiceboard['board_status']}}</h4>
+                            <h6 class="lobby-status">Status: {{practiceboard['board_status']}}</h4>
                             <h6 class="lobby-player-count">Users in lobby: {{practiceboard['user_count']}}</h4>
                         </div>
                     </a>
