--- a/chessapp/templates/base.html
+++ b/chessapp/templates/base.html
@@ -47,7 +47,7 @@
                 <a class="nav-link" id="leaderboard" href="{{url_for('views.leaderboard')}}">Leaderboard<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" id="chessboard_link" href="{{url_for('chess_bp.roomselect')}}">Chessboard<span class="sr-only">(current)</span></a>
+                <a class="nav-link" id="chessboard_link" href="{{url_for('chess_bp.roomselect')}}">Join a Lobby<span class="sr-only">(current)</span></a>
               </li>
           </ul>
         </div>
